--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,9 @@
-```pip
-fastapi
-uvicorn
-pydantic
-sqlalchemy
-psycopg2-binary
-python-dotenv
-```
-```pip
-alembic
-python-multipart
-email-validator
-```
+fastapi==0.110.0
+uvicorn==0.27.0
+pydantic==2.6.0
+sqlalchemy==2.0.25
+psycopg2-binary==2.9.9
+python-dotenv==1.0.1
+alembic==1.13.1
+python-multipart==0.0.9
+email-validator==2.1.0.post1
