--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,12 @@
 fastapi==0.110.0
 uvicorn==0.27.0
 pydantic==2.6.0
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
 python-dotenv==1.0.1
-alembic==1.13.1
 python-multipart==0.0.9
-email-validator==2.1.0.post1
+
+# ML & Data Science
+scikit-learn==1.4.0
+xgboost==2.0.3
+pandas==2.2.0
+numpy==1.26.4
+scipy==1.12.0
