feat: Add Dockerfile to containerize the backend application, including dependency installation, data generation, model training, and Uvicorn server setup.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,24 +1,16 @@
-# ── Build stage ─────────────────────────────────────────────────────────────
 FROM python:3.10-slim
 
 WORKDIR /app
 
-# Install OS-level build tools needed by some Python wheels (e.g. xgboost)
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    g++ \
+    gcc g++ \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies first (layer cache friendly)
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application source
 COPY . .
 
-# Generate synthetic data & train models at image-build time.
-# Pre-built .pkl artefacts are baked into the image so the container
-# starts instantly without re-training.
 RUN python data_generator.py
 RUN python model_training.py
 
