--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # Python
 __pycache__/
 *.py[cod]
-*.pyo
-*.pyd
-.Python
 venv/
 env/
 .env
@@ -13,13 +10,9 @@ football_data.csv
 # Node
 node_modules/
 dist/
-dist-ssr/
-*.local
 
-# IDE
+# IDE / OS
 .vscode/
 .idea/
 .DS_Store
-
-# Logs
 *.log
