feat: Implement initial frontend application for football prediction with team selection, result display, and environment examples.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,22 @@
 # ─────────────────────────────────────────────────────────────────
-# Football Match Predictor — Frontend Environment Variables
+# Football Match Predictor — Backend Environment Variables
 # ─────────────────────────────────────────────────────────────────
 # Copy this file to .env and fill in your values.
 # Never commit .env to version control.
 # ─────────────────────────────────────────────────────────────────
 
-# Base URL of the backend API.
-# Development: leave commented out — Vite proxy handles it automatically.
-# Production: set to your deployed backend URL (no trailing slash).
-# VITE_API_BASE_URL=https://your-backend.onrender.com
+# Path to the trained model pickle file
+# Default: football_model.pkl (same directory as main.py)
+MODEL_PATH=football_model.pkl
 
-# Note: All frontend env vars MUST start with VITE_ to be
-# accessible in the browser. Variables without this prefix
-# are ignored by Vite at build time.
+# Path to the saved ELO + team stats state file
+# Default: current_state.pkl (same directory as main.py)
+STATE_PATH=current_state.pkl
+
+# Comma-separated list of allowed frontend origins for CORS.
+# Use * to allow all origins (only safe for development).
+# Production example: https://your-app.vercel.app
+ALLOWED_ORIGINS=*
+
+# Port the uvicorn server listens on (used in some hosting platforms)
+PORT=8000
